--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?4942">
+	<link rel="stylesheet" type="text/css" href="./all.css?3396">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <script
@@ -63,13 +63,12 @@ $(function(){
 <div class="page-container">
     
 <!-- header -->
-<div class="bloc freedom-nav bgc-white-smoke l-bloc sticky-nav" id="header">
+<div class="bloc sticky-nav freedom-nav kcp-navbar bgc-black " id="header">
 	<div class="container bloc-no-padding">
-		<div class="row ">
+		<div class="row">
 			<div class="col align-self-center">
-				<nav class="navbar row navbar-light freedom-navbar navbar-expand-md" role="navigation">
+				<nav class="navbar row freedom-navbar navbar-expand-md navbar-dark" role="navigation">
 					<div class="container-fluid">
-						<a class="navbar-brand animated pulse-hvr" href="./"><img src="img/dark.png" alt="logo" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 me-md-0 ms-auto" data-toggle="collapse" data-target=".navbar-45418" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -113,7 +112,7 @@ $(function(){
 <!-- header-logos END -->
 
 <!-- hero -->
-<div class="bloc tc-onyx b-parallax d-bloc" id="hero">
+<div class="bloc tc-onyx b-parallax l-bloc" id="hero">
 	<div class="parallax bg-ISS-46-Glittering-lights-of-the-American-Midwest-iss bgc-white-smoke">
 	</div>
 	<div class="container bloc-md-md bloc-md-sm bloc-md bloc-sm-lg">
@@ -130,7 +129,7 @@ $(function(){
 <!-- hero END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-outer-space" id="bloc-3">
+<div class="bloc tc-outer-space l-bloc" id="bloc-3">
 	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
 			<div class="col">
@@ -371,7 +370,7 @@ $(function(){
 <!-- video-modal END -->
 
 <!-- testimonials -->
-<div class="bloc tc-onyx-2 bgc-white-smoke" id="testimonials">
+<div class="bloc tc-onyx-2 bgc-white-smoke l-bloc" id="testimonials">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="text-center text-md-start col-lg-8 offset-lg-2 col-md-10 offset-md-1">
@@ -493,7 +492,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?696"></script><!-- Additional JS END -->
+<script src="./js/all.js?4545"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
