--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -18,9 +18,9 @@
 	<meta property="og:description" content="A horizontally scalable generic control plane based on Kubernetes.">
 	<meta property="og:url" content="https://kcp.io/"> 
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png?8731">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?3909">
+	<link rel="stylesheet" type="text/css" href="./all.css?4678">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <script
@@ -64,7 +64,7 @@ $(function(){
     
 <!-- header -->
 <div class="bloc sticky-nav freedom-nav kcp-navbar bgc-black" id="header">
-	<div class="container bloc-no-padding">
+	<div class="container bloc-no-padding kcp-vertical-center">
 		<div class="row">
 			<div class="col align-self-center">
 				<nav class="navbar row freedom-navbar navbar-expand-md navbar-dark" role="navigation">
@@ -75,7 +75,7 @@ $(function(){
 						<div class="collapse navbar-collapse navbar-45418  fullscreen-nav open-down">
 							<ul class="site-navigation nav navbar-nav ms-auto">
 								<li class="nav-item kcp-navbar-menu">
-									<a href="/docs" class="nav-link float-lg-end fas fa-book"></a> <a href="/docs" class="nav-link float-lg-end">Documentation</a>
+									<a href="/docs" class="nav-link float-lg-end">Documentation</a>
 								</li>
 								<li class="nav-item">
 									<a href="/blog" class="nav-link">Blog</a>
@@ -83,11 +83,8 @@ $(function(){
 								<li class="nav-item">
 									<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#contribute',this)">Contribute</a>
 								</li>
-								<li class="nav-item">
+								<li class="nav-item ">
 									<a href="https://github.com/kcp-dev/kcp" class="nav-link">Github</a>
-								</li>
-								<li class="nav-item">
-									<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#community',this)">Community</a>
 								</li>
 							</ul>
 						</div>
@@ -129,7 +126,7 @@ $(function(){
 <!-- hero END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-outer-space l-bloc " id="bloc-3">
+<div class="bloc tc-outer-space l-bloc" id="bloc-3">
 	<div class="container bloc-lg bloc-md-lg">
 		<div class="row">
 			<div class="col">
@@ -495,7 +492,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?5807"></script><!-- Additional JS END -->
+<script src="./js/all.js?7737"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
