--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?7144">
+	<link rel="stylesheet" type="text/css" href="./all.css?8086">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -93,7 +93,7 @@ $(function(){
 								<li class="nav-item">
 									<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#contribute',this)">Contribute</a>
 								</li>
-								<li class="nav-item ">
+								<li class="nav-item">
 									<a href="https://github.com/kcp-dev/kcp" class="nav-link">Github</a>
 								</li>
 							</ul>
@@ -122,7 +122,7 @@ $(function(){
 <div class="bloc tc-onyx b-parallax l-bloc" id="hero">
 	<div class="parallax bg-ISS-46-Glittering-lights-of-the-American-Midwest-iss bgc-white-smoke">
 	</div>
-	<div class="container bloc-md-md bloc-md-sm bloc-md bloc-sm-lg">
+	<div class="container -sm bloc-md-sm -md">
 		<div class="row row-margin-bottom">
 			<div class="text-center text-lg-center text-md-center col-md-10 offset-md-1 offset-lg-0 col-lg-12">
 				<img src="img/blue-green-glow.png" class="img-fluid mx-auto d-block img-style" alt="blue green" />
@@ -136,11 +136,11 @@ $(function(){
 <!-- hero END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-outer-space l-bloc" id="bloc-3">
-	<div class="container bloc-lg bloc-md-lg">
+<div class="bloc tc-outer-space l-bloc " id="bloc-3">
+	<div class="container bloc-md-lg">
 		<div class="row">
 			<div class="col">
-				<h2 class="mg-md text-lg-center h2-style tc-onyx">
+				<h2 class="mg-md text-lg-center h2-style tc-onyx btn-resize-mode">
 					An OpenSource horizontally scalable Kubernetes-like Control Plane.
 				</h2>
 			</div>
@@ -502,7 +502,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?2163"></script><!-- Additional JS END -->
+<script src="./js/all.js?5735"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
