--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -18,9 +18,9 @@
 	<meta property="og:description" content="A horizontally scalable generic control plane based on Kubernetes.">
 	<meta property="og:url" content="https://kcp.io/"> 
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?1820">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?8086">
+	<link rel="stylesheet" type="text/css" href="./all.css?3206">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -87,13 +87,13 @@ $(function(){
 								<li class="nav-item kcp-navbar-menu">
 									<a href="/docs" class="nav-link float-lg-end">Documentation</a>
 								</li>
-								<li class="nav-item">
+								<li class="nav-item kcp-navbar-menu">
 									<a href="/blog" class="nav-link">Blog</a>
 								</li>
-								<li class="nav-item">
+								<li class="nav-item kcp-navbar-menu">
 									<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#contribute',this)">Contribute</a>
 								</li>
-								<li class="nav-item">
+								<li class="nav-item ">
 									<a href="https://github.com/kcp-dev/kcp" class="nav-link">Github</a>
 								</li>
 							</ul>
@@ -136,7 +136,7 @@ $(function(){
 <!-- hero END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-outer-space l-bloc " id="bloc-3">
+<div class="bloc tc-outer-space l-bloc" id="bloc-3">
 	<div class="container bloc-md-lg">
 		<div class="row">
 			<div class="col">
@@ -502,7 +502,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?5735"></script><!-- Additional JS END -->
+<script src="./js/all.js?98"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
