Resize frontpage for all devices

--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -18,9 +18,9 @@
 	<meta property="og:description" content="A horizontally scalable generic control plane based on Kubernetes.">
 	<meta property="og:url" content="https://kcp.io/"> 
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png?1820">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?7532">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?3206">
+	<link rel="stylesheet" type="text/css" href="./all.css?5372">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -93,7 +93,7 @@ $(function(){
 								<li class="nav-item kcp-navbar-menu">
 									<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#contribute',this)">Contribute</a>
 								</li>
-								<li class="nav-item ">
+								<li class="nav-item kcp-navbar-menu">
 									<a href="https://github.com/kcp-dev/kcp" class="nav-link">Github</a>
 								</li>
 							</ul>
@@ -140,7 +140,7 @@ $(function(){
 	<div class="container bloc-md-lg">
 		<div class="row">
 			<div class="col">
-				<h2 class="mg-md text-lg-center h2-style tc-onyx btn-resize-mode">
+				<h2 class="mg-md text-lg-center h2-style tc-onyx btn-resize-mode float-md-none text-md-center text-sm-center ">
 					An OpenSource horizontally scalable Kubernetes-like Control Plane.
 				</h2>
 			</div>
@@ -502,7 +502,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?98"></script><!-- Additional JS END -->
+<script src="./js/all.js?1614"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
