--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -18,9 +18,9 @@
 	<meta property="og:description" content="A horizontally scalable generic control plane based on Kubernetes.">
 	<meta property="og:url" content="https://kcp.io/"> 
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png?7532">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?5372">
+	<link rel="stylesheet" type="text/css" href="./all.css?1858">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -140,7 +140,7 @@ $(function(){
 	<div class="container bloc-md-lg">
 		<div class="row">
 			<div class="col">
-				<h2 class="mg-md text-lg-center h2-style tc-onyx btn-resize-mode float-md-none text-md-center text-sm-center ">
+				<h2 class="mg-md text-lg-center h2-style tc-onyx btn-resize-mode float-md-none text-md-center text-sm-center">
 					An OpenSource horizontally scalable Kubernetes-like Control Plane.
 				</h2>
 			</div>
@@ -323,7 +323,7 @@ $(function(){
 <!-- timeline END -->
 
 <!-- contribute -->
-<div class="bloc bgc-onyx d-bloc" id="contribute">
+<div class="bloc bgc-onyx d-bloc " id="contribute">
 	<div class="container bloc-lg-lg bloc-lg-md bloc-md bloc-lg-sm">
 		<div class="row">
 			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
@@ -334,20 +334,29 @@ $(function(){
 					<span class="fa fa-heart none icon-red icon-xl"></span>
 				</div>
 				<h5 class="text-center mg-md">
-					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality. <br><br>Talk to us in person in the <a href="https://kubernetes.slack.com/archives/C021U8WSAFK">#kcp-dev</a> channel in Kubernetes Slack. Find our code at <a href="https://github.com/kcp-dev/kcp">Github</a>.<br><br>We have a weekly community meeting: every <strong>Tuesday 11am EST</strong>. Join us live! The <a href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting.
+					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality. <br><br>Talk to us in person in the <a href="https://kubernetes.slack.com/archives/C021U8WSAFK">#kcp-dev</a> channel in Kubernetes Slack. Find our code at <a href="https://github.com/kcp-dev/kcp">Github</a>.<br>
 				</h5>
+				<div >
+					<a href="https://github.com/kcp-dev/kcp/graphs/contributors">
+  <img src="https://contrib.rocks/image?repo=kcp-dev/kcp&amp;columns=10&amp;max=100" width="100%">
+</a>
+					
+				</div>
+				<h5 class="text-center mg-md">
+						<br>We have a weekly community meeting: every <strong>Tuesday 11am EST</strong>. Join us live! The <a href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting.
+					</h5>
 			</div>
 		</div>
 		<div class="row voffset-lg">
-			<div class="text-center text-md-start text-lg-center align-self-center offset-lg-7 col-lg-4 col-md-5 offset-md-5 col-9 col-sm-6 offset-sm-4">
-				<h4 class="tc-white mg-clear text-end freedom-bold">
-					See more here how you can contribute to kcp
-				</h4>
+				<div class="text-center text-md-start text-lg-center align-self-center offset-lg-7 col-lg-4 col-md-5 offset-md-5 col-9 col-sm-6 offset-sm-4">
+					<h4 class="tc-white mg-clear text-end freedom-bold">
+						See more here how you can contribute to kcp
+					</h4>
+				</div>
+				<div class="text-center text-md-start align-self-center text-lg-center col-lg-1 col-md-2 col-3 col-sm-2">
+					<a href="https://github.com/kcp-dev/kcp/blob/main/CONTRIBUTING.md" class="btn btn-d btn-sq btn-lg freedom-more-button">⮕</a>
+				</div>
 			</div>
-			<div class="text-center text-md-start align-self-center text-lg-center col-lg-1 col-md-2 col-3 col-sm-2">
-				<a href="https://github.com/kcp-dev/kcp/blob/main/CONTRIBUTING.md" class="btn btn-d btn-sq btn-lg freedom-more-button">⮕</a>
-			</div>
-		</div>
 	</div>
 </div>
 <!-- contribute END -->
@@ -502,7 +511,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?1614"></script><!-- Additional JS END -->
+<script src="./js/all.js?3445"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
