--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -18,9 +18,9 @@
 	<meta property="og:description" content="A horizontally scalable generic control plane based on Kubernetes.">
 	<meta property="og:url" content="https://kcp.io/"> 
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?4957">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?3942">
+	<link rel="stylesheet" type="text/css" href="./all.css?1701">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -85,7 +85,7 @@ $(function(){
 						<div class="collapse navbar-collapse navbar-45418  fullscreen-nav open-down">
 							<ul class="site-navigation nav navbar-nav ms-auto">
 								<li class="nav-item kcp-navbar-menu">
-									<a href="/docs" class="nav-link float-lg-end">Documentation</a>
+									<a href="/docs" class="nav-link float-lg-end ">Documentation</a>
 								</li>
 								<li class="nav-item kcp-navbar-menu">
 									<a href="/blog" class="nav-link">Blog</a>
@@ -327,7 +327,7 @@ $(function(){
 	<div class="container bloc-lg-lg bloc-lg-md bloc-md bloc-lg-sm">
 		<div class="row">
 			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-				<h2 class="text-center tc-white mg-md ">
+				<h2 class="text-center tc-white mg-md">
 					We love collaboration&nbsp;
 				</h2>
 				<div class="text-center">
@@ -343,7 +343,7 @@ $(function(){
 					
 				</div>
 				<h5 class="text-center mg-md">
-						<br>We have a weekly community meeting: every <strong>Tuesday 11am EST</strong>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the&nbsp;<a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
+						<br />We have a weekly <span class="kcp-community-meeting">community meeting: every Tuesday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
 					</h5>
 			</div>
 		</div>
@@ -511,7 +511,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?3383"></script><!-- Additional JS END -->
+<script src="./js/all.js?2449"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
