Unify frontpage font styles

--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?5559">
+	<link rel="stylesheet" type="text/css" href="./all.css?80">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -37,9 +37,6 @@
       src="https://code.jquery.com/jquery-2.2.4.min.js"
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
-
-<script src="/asciinema-player.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/asciinema-player.css" />
 
 <script>
  $(window).scroll(function(){
@@ -160,19 +157,19 @@ $(function(){
 			</div>
 			<div class="col-md-4 text-center bloc-margin-top">
 				<span class="fa fa-star icon-round icon-md kcp-star-icon "></span>
-				<h3 class="mg-md tc-outer-space h3-bloc-3-style">
+				<h3 class="mg-md tc-outer-space h3-style">
 					<strong>Massively multi-tenant API services</strong>
 				</h3>
-				<p class="p-bloc-3-style">
+				<p class="p-style">
 					Enabling API service providers to offer Kubernetes-native APIs centrally using multi-tenant operators.
 				</p>
 			</div>
 			<div class="col-md-4 text-center">
 				<span class="fa fa-star icon-round icon-md kcp-star-icon "></span>
-				<h3 class="mg-md tc-outer-space h3-3-style">
+				<h3 class="mg-md tc-outer-space h3-style">
 					<strong>SaaS-like API Consumption</strong>
 				</h3>
-				<p class="p-3-style">
+				<p class="p-style">
 					Easy API consumption for users in their workspaces in a SaaS-like fashion.
 				</p>
 			</div>
@@ -200,7 +197,7 @@ $(function(){
 	<div class="container bloc-md bloc-no-padding-sm">
 		<div class="row row-padding-bottom">
 			<div class="text-md-start col text-lg-start align-self-center">
-				<p class="tc-onyx freedom-time-date text-lg-end text-md-end mg-clear scroll-fx-left-in-fade text-center mg-md-xs mg-clear-md text-sm-end p-4-style">
+				<p class="tc-onyx freedom-time-date text-lg-end text-md-end mg-clear scroll-fx-left-in-fade text-center mg-md-xs mg-clear-md text-sm-end">
 					Kubernetes at its Core
 				</p>
 			</div>
@@ -216,7 +213,7 @@ $(function(){
 			</div>
 			<div class="col freedom-time-cotent scroll-fx-in-fade">
 				<img src="img/Kubernetes_logo_without_workmark.svg" class="img-fluid mx-auto d-block mg-md img-timeline-style" alt="coffee%20banner" />
-				<h5 class="tc-onyx mg-lg mg-clear-sm text-center">
+				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 					kcp takes full advantage of Kubernetes-style APIs, the glue that binds the cloud-native technology ecosystem together and imbues Kubernetes popular end-user experience, but kcp has unbound it from Kubernetes workload orchestration and clusters.<br>
 				</h5>
 			</div>
@@ -233,7 +230,7 @@ $(function(){
 						</div>
 					</div>
 				</div>
-				<h5 class="tc-onyx mg-lg mg-clear-sm text-center">
+				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style ">
 						kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace
 					</h5>
 			</div>
@@ -245,14 +242,14 @@ $(function(){
 					</div>
 				</div>
 			<div class="text-md-start col text-lg-start align-self-center order-1">
-					<p class="tc-onyx freedom-time-date mg-clear scroll-fx-right-in-fade text-center mg-md-xs text-lg-start text-md-start text-sm-start p-7-style">
+					<p class="tc-onyx freedom-time-date mg-clear scroll-fx-right-in-fade text-center mg-md-xs text-lg-start text-md-start text-sm-start">
 						Massive Multi-Tenancy
 					</p>
 				</div>
 		</div>
 		<div class="row">
 				<div class="text-md-start col text-lg-start align-self-center">
-					<p class="tc-onyx freedom-time-date text-lg-end text-md-end mg-clear scroll-fx-left-in-fade mg-md-xs text-center text-sm-end p-8-style">
+					<p class="tc-onyx freedom-time-date text-lg-end text-md-end mg-clear scroll-fx-left-in-fade mg-md-xs text-center text-sm-end">
 						APIs as a Service
 					</p>
 				</div>
@@ -260,9 +257,8 @@ $(function(){
 					<div id="asciinema-apis-as-a-service" class="modal fade" tabindex="-1" role="dialog">
 						<div class="modal-dialog modal-fill modal-dialog-centered" role="document">
 							<div class="bgc-3964 freedom-modal modal-content">
-								<a href="#" class="btn btn-d btn-lg btn-style-none" data-bs-dismiss="modal" aria-label="Close"><span class="fa fa-times close"></span></a>
 								<div >
-									<script src="https://asciinema.org/a/14.js" id="asciicast-14" async="" data-autoplay="true" data-size="big"></script>
+									<script src="https://asciinema.org/a/14.js" id="asciicast-14" async="" data-autoplay="true" data-size="big" data-fit="both"></script>
 									
 								</div>
 							</div>
@@ -280,7 +276,7 @@ $(function(){
 								<a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service"><span class="icon-white-smoke fa fa-play-circle icon-xl"></span></a>
 							</div><a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service" id="asciinemo-apis-as-a-service"><img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="notebook" /></a>
 						</div>
-						<h4 class="tc-onyx mg-lg mg-clear-sm text-center">
+						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 							kcp extends Kube&rsquo;s CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces. Securely and efficiently.
 						</h4>
 					</div>
@@ -288,7 +284,7 @@ $(function(){
 		<div class="row">
 					<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
 						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
-						<h4 class="tc-onyx mg-lg mg-clear-sm text-center">
+						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 							kcp does not replace Kubernetes, but complements it.<br><br>As a global control plane to inter-connect Kubernetes clusters.<br> <br>As a backend to host Kubernetes APIs as SaaS to any Kubernetes on any platform and any cloud provider, natively.<br><br>
 						</h4>
 					</div>
@@ -300,14 +296,14 @@ $(function(){
 						</div>
 					</div>
 					<div class="text-md-start col text-lg-start align-self-center order-1">
-						<p class="tc-onyx freedom-time-date mg-clear scroll-fx-right-in-fade text-center mg-md-xs text-sm-start p-timeline-style">
+						<p class="tc-onyx freedom-time-date mg-clear scroll-fx-right-in-fade text-center mg-md-xs text-sm-start">
 							Open – no walled Garden
 						</p>
 					</div>
 				</div>
 		<div class="row">
 					<div class="text-md-start col text-lg-start align-self-center">
-						<p class="tc-onyx freedom-time-date text-lg-end text-md-end text-sm-end mg-clear scroll-fx-left-in-fade mg-md-xs text-center p-12-style">
+						<p class="tc-onyx freedom-time-date text-lg-end text-md-end text-sm-end mg-clear scroll-fx-left-in-fade mg-md-xs text-center">
 							Horizontally Scalable
 						</p>
 					</div>
@@ -320,7 +316,7 @@ $(function(){
 					</div>
 					<div class="col freedom-time-cotent scroll-fx-in-fade">
 						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
-						<h4 class="tc-onyx mg-lg mg-clear-sm text-center">
+						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 							kcp schedules workspaces to shared apiservers (the shards), similarly to pods scheduled to nodes and containers on a node sharing a Linux kernel. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.<br>
 						</h4>
 					</div>
@@ -328,7 +324,7 @@ $(function(){
 		<div class="row">
 					<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
 						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
-						<h4 class="tc-onyx mg-lg mg-clear-sm text-center">
+						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 							kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is a kcp sub-project to re-add many of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 						</h4>
 					</div>
@@ -340,7 +336,7 @@ $(function(){
 						</div>
 					</div>
 					<div class="text-md-start col text-lg-start align-self-center order-1">
-						<p class="tc-onyx freedom-time-date mg-clear scroll-fx-right-in-fade text-center mg-md-xs text-sm-start p-15-style">
+						<p class="tc-onyx freedom-time-date mg-clear scroll-fx-right-in-fade text-center mg-md-xs text-sm-start">
 							Compute – Where are the pods?
 						</p>
 					</div>
@@ -350,8 +346,8 @@ $(function(){
 <!-- timeline END -->
 
 <!-- contribute -->
-<div class="bloc bgc-onyx d-bloc " id="contribute">
-	<div class="container bloc-lg-lg bloc-lg-md bloc-md bloc-lg-sm">
+<div class="bloc bgc-onyx d-bloc" id="contribute">
+	<div class="container bloc-lg-md bloc-md bloc-lg-sm bloc-md-lg">
 		<div class="row">
 			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
 				<h2 class="text-center tc-white mg-md">
@@ -374,16 +370,6 @@ $(function(){
 					</h5>
 			</div>
 		</div>
-		<div class="row voffset-lg">
-				<div class="text-center text-md-start text-lg-center align-self-center offset-lg-7 col-lg-4 col-md-5 offset-md-5 col-9 col-sm-6 offset-sm-4">
-					<h4 class="tc-white mg-clear text-end freedom-bold">
-						See more here how you can contribute to kcp
-					</h4>
-				</div>
-				<div class="text-center text-md-start align-self-center text-lg-center col-lg-1 col-md-2 col-3 col-sm-2">
-					<a href="https://github.com/kcp-dev/kcp/blob/main/CONTRIBUTING.md" class="btn btn-d btn-sq btn-lg freedom-more-button">⮕</a>
-				</div>
-			</div>
 	</div>
 </div>
 <!-- contribute END -->
@@ -395,7 +381,7 @@ $(function(){
 
 <!-- community -->
 <div class="bloc tc-onyx-2 l-bloc" id="community">
-	<div class="container bloc-lg-lg bloc-md-md bloc-md-sm bloc-md">
+	<div class="container bloc-md-md bloc-md-sm bloc-md bloc-md-lg">
 		<div class="row g-0 voffset-clear-md">
 			<div class="col-12">
 				<h2 class="text-center mg-clear mg-md-xs mg-md-sm mg-clear-md">
@@ -413,7 +399,7 @@ $(function(){
 <!-- community END -->
 
 <!-- footer -->
-<div class="bloc bgc-onyx tc-white d-bloc" id="footer">
+<div class="bloc tc-white bgc-true-blue" id="footer">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col text-center text-md-start">
@@ -435,7 +421,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?838"></script><!-- Additional JS END -->
+<script src="./js/all.js?8368"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
